# RustForge

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  dockerfile  init_data.sql
.sqlx/: query-05755ff8b74059273802f4586f7f8b640c6340e55407e4a15cce8d744557e7ad.json  query-0757a816b42e7726774af8bb81155eb46a98a6198fdc765741864679d405fc3b.json  query-112f8fe3a970f1f0107927237ea653988ef896cee0c77ead0f19108519727d9f.json  query-14da0732a052914fc4e3f0cd3f183864525f450fd7f88f128cd1749577c069c6.json  query-188cb718561b4ccd537b77490ceae1ea686dbc6ec5b60673a2852b0cfd2dd4bb.json  query-1b83cda57bf13cd15beeb4e7ae43f0c60c56c86d3924a21424df54afa0312eb9.json  query-1f3a356574e04b42486ef3dbee594b217a21bbc815f41d7f1837198425397953.json  query-23dc3b4a8eee950d3de79db6be49ef284b3dc2a6c91cb1d4fb5515eac86a5303.json  query-248282f6205cb7dbc21ae35cfa37dd6f514bd866cff987c0ea72ff9e15c108c3.json  query-31c65925d28fa7a9939187f0f4308cbf0790cac29b8fa62ba6b1bd76e27e83b0.json  query-33dab7093f93c03fc1e08f33cb672dd16786e66aff80a6eaac5a82033ecb0a05.json  query-37b3dbfe310fecbbb62c7b3876591b6abe2086fec0c62316897abbf475f0ae45.json  query-394bebbfe77972780948517776587a83fa8009d03ebdb3df7059668ce510a0e1.json  query-3f511149fd0f556219f263f8eaede882413ec46ff7d123738aa99f6d0006c12b.json  query-404d93e923bef8908553d463582832db8e27456745bf82672925899d7bb71d00.json  query-4612901e4f36674462b678d5ed66b9fec113bda163edee469b811dbc09413acb.json  query-463e3cb3cc41990e508d9159e6e4043629edcc6761ce8ccaddfafc51523b2991.json  (+37 more)
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
locales/: en.json  zh.json
(+98 files in other folders)
