[package]
name = "rustforge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }






# 模板引擎（用于主题系统）
tera = "1"
walkdir = "2"        # 递归扫描目录
glob = "0.3"         # 匹配模板文件

# 序列化与配置
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"

# 日志与错误处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# 异步工具
async-trait = "0.1"

wasmtime = "19"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# JWT 认证


time = "0.3"
tower-cookies = "0.10"
cookie = "0.18"
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
once_cell = "1.19"
serde_repr = "0.1"
image = "0.24"
markdown = "1.0"
mime_guess = "2.0"

